[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecmm"]

[project]
name = "ecmm"
version = "0.1.0"
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
  "pytest",
  "scipy"
  ]

docs = [
  "scipy",
  "numpy",
  "sphinx",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]

# reference: week 5 course note
# https://henryiii.github.io/se-for-sci/content/week05/precommit.html
[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "RUF",         # Ruff-specific
  "UP",          # pyupgrade
]
